--- a/Resturants/Cell/BixtokCell/IGBizTokVideoCell.xib
+++ b/Resturants/Cell/BixtokCell/IGBizTokVideoCell.xib
@@ -215,7 +215,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5FM-5V-g4z">
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5FM-5V-g4z">
                                 <rect key="frame" x="12" y="478" width="281.33333333333331" height="99"/>
                                 <subviews>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="imi-l4-upj">
